fix(nav + content) Fixing content expanding to fit nav-height and leaving whitespace at bottom (#198)
Fixing content expanding to fit nav-height and leaving whitespace at the bottom

--- a/src/components/site-navigation/site-navigation.css
+++ b/src/components/site-navigation/site-navigation.css
@@ -27,7 +27,7 @@
 
 	@media (width >= 1024px) {
 		/* Layout */
-		block-size: min(100%, 100vh);
+		block-size: 100vh;
 		inline-size: 78--step;
 		overflow-x: hidden;
 		overflow-y: auto;
